[gd_scene load_steps=9 format=3 uid="uid://dqxsi6jrohmjs"]

[ext_resource type="Script" path="res://FlatwoodsPickup.gd" id="1_7o4wy"]
[ext_resource type="Texture2D" uid="uid://cs44uxn2jlc1j" path="res://Assets/ItemSprites/flatwood eye-02.png" id="2_v070s"]
[ext_resource type="Texture2D" uid="uid://dhro7ihoxmkk3" path="res://Assets/hud assets/floating txtbox.png" id="3_ayytf"]
[ext_resource type="FontFile" uid="uid://b1iy1e5pnw0od" path="res://Assets/hud assets/GothicPixels.ttf" id="4_sgqt5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0br2u"]
radius = 23.0217

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnndg"]
radius = 19.0
height = 90.0

[sub_resource type="LabelSettings" id="LabelSettings_xscar"]
font = ExtResource("4_sgqt5")
font_size = 14
font_color = Color(0.16, 0.118453, 0.0992, 1)
outline_color = Color(0.290196, 0.215686, 0.180392, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_nj6pd"]
line_spacing = 2.0
font = ExtResource("4_sgqt5")
font_size = 13
font_color = Color(0.290196, 0.215686, 0.180392, 1)

[node name="FlatwoodsPickup" type="Area2D" groups=["sellable"]]
script = ExtResource("1_7o4wy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0br2u")

[node name="SellingInterface" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SellingInterface"]
shape = SubResource("CapsuleShape2D_fnndg")

[node name="Flatwoods" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, 4.76837e-07)
scale = Vector2(0.015, 0.015)
texture = ExtResource("2_v070s")

[node name="TextBox" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_ayytf")

[node name="Title" type="Label" parent="."]
offset_left = -51.0
offset_top = -113.0
offset_right = 53.0
offset_bottom = -93.0
text = "Flatwood Eye"
label_settings = SubResource("LabelSettings_xscar")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="."]
offset_left = -50.0
offset_top = -90.0
offset_right = 52.0
offset_bottom = -36.0
text = "Increases ranged dmg
10 Silver"
label_settings = SubResource("LabelSettings_nj6pd")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="SellingInterface" to="." method="_on_selling_interface_body_entered"]
[connection signal="body_exited" from="SellingInterface" to="." method="_on_selling_interface_body_exited"]
